--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>git status</div>
     <div>git add | add to git's control</div>
     <div>git commit -am "added new file index.html"</div>
-    <div></div>
+    <div>git push</div>
     <div></div>
     <div></div>
     <div></div>
