--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>git add | add to git's control</div>
     <div>git commit -am "added new file index.html"</div>
     <div>git push</div>
-    <div></div>
+    <div>git pull</div>
     <div></div>
     <div></div>
 </body>
